# ICSForge

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  SECURITY.md  docker-compose.demo.yml  docker-compose.yml  icsforge.sh  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  false-negative.md  false-positive.md  feature_request.md  new-protocol.md  protocol-bug.md
.github/workflows/: ci.yml
docker/: Dockerfile  Dockerfile.receiver  Dockerfile.viewer  docker-compose.receiver.yml  suricata-classification.config  suricata-reference.config  suricata.yaml
docs/: CLI_REFERENCE.md  FEATURES_GUIDE.md  HOWTO.md  INSTALL.md  INSTALLATION.md  LIVE_SOC_DEMO_FLOW.md  MALCOLM_VALIDATION_v0.62.0.json  MALCOLM_VALIDATION_v0.62.0.md  MALCOLM_VALIDATION_v0.62.1.json  MALCOLM_VALIDATION_v0.62.1.md  MITRE_ALIGNMENT.md  MITRE_V19_CROSSWALK.md  PHASE.md  REFERENCE_COVERAGE_iec104_per_protocol.json  REFERENCE_COVERAGE_iec104_per_protocol.md  REFERENCE_COVERAGE_v0.62.0.json  REFERENCE_COVERAGE_v0.62.0.md  REFERENCE_DETECTION_COVERAGE.md  SCENARIO_SCHEMA.md  SIEM_INTEGRATION.md  USER_MANUAL.md  icsforge-coverage-layer.json
docs/third_party_validation/: MALCOLM_VALIDATION_v0.62.0.md
icsforge/: __init__.py  auth.py  cli.py  core.py  log.py
icsforge/campaigns/: __init__.py  builtin.yml  runner.py
icsforge/data/: audit_style_classification.json  audit_technique_requirements.json  detection_rules_specs.json  ics_attack_matrix.json  ics_attack_matrix_v19.json  mitre_v18_v19_crosswalk.json  technique_support.json  technique_variants.json
icsforge/detection/: __init__.py  __main__.py  generator.py  generic.py  mapping.py  suricata.py  zeek.py
icsforge/detections/: __init__.py  generator.py
icsforge/eve/: __init__.py  tap.py
icsforge/live/: __init__.py  sender.py
icsforge/profiles/: food_beverage.yml  manufacturing.yml  oil_gas.yml  power.yml
icsforge/protocols/: __init__.py  bacnet.py  common.py  covert_marker.py  dnp3.py  enip.py  iec104.py  iec61850.py  (+5 more)
scripts/: audit_resumable.py  audit_stealth.py  generate_navigator_layer.py  measure_detection_coverage.py  release.sh  smoke_test.py  v19_coverage.py  validate_pcaps.py  validate_third_party.sh
tests/: conftest.py  test_auth.py  test_core.py  test_coverage_consistency.py  test_e2e_pipeline.py  test_live_offline_parity.py  test_markerless_attribution.py  test_protocols.py  test_scenario_semantic_audit.py  test_scenarios.py  test_sse_campaigns.py  test_stateful_tcp.py  test_test_profile.py  test_v062_2_audit.py  test_v062_additions.py  test_v19_coverage_canonical.py  test_viewer.py  test_web_api.py
(+47 files in other folders)
